--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   eva_icons_flutter: ^3.1.0
   flutter_quill: ^10.8.5
   flutter_speed_dial: ^7.0.0
+  lottie_screen_onboarding_flutter: ^1.1.3
 
 dev_dependencies:
   flutter_test:
