--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_quill: ^10.8.5
   flutter_speed_dial: ^7.0.0
   lottie_screen_onboarding_flutter: ^1.1.3
+  provider: ^6.1.2
+  table_calendar: ^3.1.3
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
