--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   table_calendar: ^3.1.3
   collection: ^1.18.0
+  socket_io_client: ^3.0.2
 
 dev_dependencies:
   flutter_test:
