--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   table_calendar: ^3.1.3
   collection: ^1.18.0
   socket_io_client: ^3.0.2
+  nepali_utils: ^3.0.6
 
 dev_dependencies:
   flutter_test:
