--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   collection: ^1.18.0
   socket_io_client: ^3.0.2
   nepali_utils: ^3.0.6
+  flutter_webrtc: ^0.12.6
 
 dev_dependencies:
   flutter_test:
