--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   socket_io_client: ^3.0.2
   nepali_utils: ^3.0.6
   flutter_webrtc: ^0.12.6
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
